<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/icon_home_white"
        android:title="@string/menu_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_petLocation_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/petLocation_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_petLocation_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_petLocation_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_goToEvents"
        android:title="@string/button_goToEvents"
        app:showAsAction="never"/>


</menu>