<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/petLocationNewFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.petLocationNew.PetLocationNewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/petLocationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/anton"
                android:gravity="center_horizontal|center_vertical"
                android:inputType="none"
                android:paddingTop="6pt"
                android:text="@string/new_petLocation_label"
                android:textColor="@color/colorTitles"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/editPetLocationDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/oswald"
                android:text="@string/enter_petLocation_details"
                android:textColor="@color/colorSubTitles"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/petLocationTitleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/oswald"
                android:text="@string/petLocation_title_label"
                android:textColor="#2AA599"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/petLocationTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:fontFamily="@font/oswald"
                android:hint="@string/hint_petLocationTitle"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/petLocationDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/oswald"
                android:text="@string/petLocation_description_label"
                android:textColor="#2AA599"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/oswald"
                android:hint="@string/hint_petLocationDescription"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/petLocationCategoryLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/oswald"
                android:text="@string/petLocation_category_label"
                android:textColor="#2AA599"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/petLocationCategorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/petLocationImageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/oswald"
                android:text="@string/petLocation_image_label"
                android:textColor="#2AA599"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/petLocationImage"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#3F736E"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addPetLocation"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />




        </LinearLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>