<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventsMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eventsMap.EventsMapFragment">



    <fragment
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="361dp"
        android:layout_height="451dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="356dp"
        android:layout_height="127dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/currentImage"
                android:layout_width="121dp"
                android:layout_height="98dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/event_image_placeholder" />

            <TextView
                android:id="@+id/currentTitle"
                android:layout_width="175dp"
                android:layout_height="21dp"
                android:fontFamily="@font/oswald"
                android:text="@string/event_title_placeholder"
                android:textColor="@color/colorTitles"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/currentPetLocation"
                app:layout_constraintEnd_toStartOf="@+id/currentImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.722" />

            <TextView
                android:id="@+id/currentPetLocation"
                android:layout_width="173dp"
                android:layout_height="21dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oswald"
                android:text="@string/event_petLocation_placeholder"
                app:layout_constraintBottom_toTopOf="@+id/currentDescription"
                app:layout_constraintTop_toBottomOf="@+id/currentTitle"
                app:layout_constraintEnd_toStartOf="@+id/currentImage"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/currentDescription"
                android:layout_width="173dp"
                android:layout_height="48dp"
                android:layout_marginBottom="18dp"
                android:fontFamily="@font/oswald"
                android:text="@string/event_description_placeholder"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/currentImage"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>